# Ios-nothing-rec

./: settings.gradle.kts
.github/workflows/: build.yml
NothingRecorder/.github/workflows/app/src/main/: AndroidManifest.xml
NothingRecorder/.github/workflows/app/src/main/java/com/example/nothingrecorder/: MainActivity.kt  ScreenRecordService.kt
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  hardcore-engine.cpp
app/src/main/java/com/example/nothingrecorder/: AudioEncoder.kt  CrashHandler.kt  MainActivity.kt  MuxerPipeline.kt  NativeEncoder.kt  RecorderScreen.kt  ScreenRecordService.kt  VideoEncoder.kt
